fixed missing space between header and topmenu
the #header's margin-bottom was missing for mobile

--- a/tpl_lessallrounder/less/ribbons.less
+++ b/tpl_lessallrounder/less/ribbons.less
@@ -72,6 +72,9 @@
 	}
 	@media (max-width: @maxMobileWidth) {
 		.ribbons-off();
+		#header {
+			margin: 0 0 15px 0;
+		}
 	}
 }
 
